update activate Spells from hand

--- a/duels/13mar21/match1/duel1.html
+++ b/duels/13mar21/match1/duel1.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Daniel activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Daniel place a <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup> from his Deck face-up in Spell &amp; Trap Zone 3.</p>
+      <p>Daniel activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> in Spell &amp; Trap Zone 4. Daniel place a <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup> from his Deck face-up in Spell &amp; Trap Zone 3.</p>
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Roshi - Laolao</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>. Daniel send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup> from his hand to Monster Zone 4 in Defense Position.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup>, banishing it. Daniel add a <span class="cardName">Virtual World Mai-Hime - Lulu</span> from his Deck to the hand, then send a <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup> from his hand to the GY.</p>
       <p class="activation">Daniel activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand.</p><div class="chain">
@@ -31,10 +31,10 @@
       <p>Daniel add his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> to the hand.</p>
     </div>
     <div class="turn-p2">
-      <p>Leonardo activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Its effects resolve.</p>
+      <p>Leonardo activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> in Spell &amp; Trap Zone 1. Its effects resolve.</p>
       <p>Leonardo activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Leonardo 7200 LP). Leonardo add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Daniel activate the effect of his <span class="cardName">True King of All Calamities</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Kyubi - Shenshen</span><sup>1</sup>. The effect resolve.</p>
-      <p>Leonardo activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Leonardo add a <span class="cardName">Zoodiac Bunnyblast</span> from his Deck to the hand.</p>
+      <p>Leonardo activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> in Spell &amp; Trap Zone 3. Leonardo add a <span class="cardName">Zoodiac Bunnyblast</span> from his Deck to the hand.</p>
       <p>Leonardo Normal Summon a <span class="cardName">Zoodiac Bunnyblast</span><sup>1</sup> to Monster Zone 2.</p>
       <p>Daniel activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>, targeting Leonardo's <span class="cardName">Zoodiac Bunnyblast</span><sup>1</sup>. Daniel shuffle into the Deck his <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> and his <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup>, then destroy Leonardo's <span class="cardName">Zoodiac Bunnyblast</span><sup>1</sup>.</p>
       <p>Leonardo Set<sup>1</sup> a Spell/Trap in Spell &amp; Trap Zone 5.</p>
