--- a/duels/13mar21/match12/duel2.html
+++ b/duels/13mar21/match12/duel2.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Alex activate a <span class="cardName">Chaos Space</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 5, sending a <span class="cardName">Black Dragon Collapserpent</span><sup>1</sup> from his hand to the GY. Alex add a <span class="cardName">White Dragon Wyverburster</span> from his Deck to the hand.</p>
+      <p>Alex activate a <span class="cardName">Chaos Space</span><sup>1</sup> in Spell &amp; Trap Zone 5, sending a <span class="cardName">Black Dragon Collapserpent</span><sup>1</sup> from his hand to the GY. Alex add a <span class="cardName">White Dragon Wyverburster</span> from his Deck to the hand.</p>
       <p>Alex banish his <span class="cardName">Black Dragon Collapserpent</span><sup>1</sup> to Special Summon a <span class="cardName">White Dragon Wyverburster</span><sup>1</sup> from his hand to Monster Zone 4 in Attack Position.</p>
       <p>Alex activate the effect of his <span class="cardName">Chaos Space</span><sup>1</sup>, banishing it, then target his <span class="cardName">Black Dragon Collapserpent</span><sup>1</sup>. Alex place his <span class="cardName">Black Dragon Collapserpent</span><sup>1</sup> on the bottom of the Deck, then draw 1 card.</p>
       <p>Marco activate the effect of a <span class="cardName">Droll &amp; Lock Bird</span><sup>1</sup> in his hand, sending it to the GY. The effect resolve.</p>
