--- a/duels/13mar21/match15/duel1.html
+++ b/duels/13mar21/match15/duel1.html
@@ -36,7 +36,7 @@
       <p>Donovan activate the effect of his <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>1</sup>, banishing it. Donovan Set<sup>6</sup> a <span class="cardName">Huaquero of the Golden Land</span><sup>1</sup> from his Deck to Spell &amp; Trap Zone 4.</p>
     </div>
     <div class="turn-p2">
-      <p>Daniel activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Daniel place a <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup> from his Deck face-up in Spell &amp; Trap Zone 4.</p>
+      <p>Daniel activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> in Spell &amp; Trap Zone 3. Daniel place a <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup> from his Deck face-up in Spell &amp; Trap Zone 4.</p>
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Xiezhi - Jiji</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup>. Daniel send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>2</sup> from his hand to Monster Zone 3 in Defense Position.</p>
       <p>Donovan activate his Set<sup>6</sup> <span class="cardName">Huaquero of the Golden Land</span><sup>1</sup>. Donovan Special Summon his <span class="cardName">Huaquero of the Golden Land</span><sup>1</sup> to Monster Zone 1 in Defense Position, then banish Daniel's <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup>.</p>
       <p>Daniel activate the effect of a <span class="cardName">Virtual World Roshi - Laolao</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup>. Daniel send a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Roshi - Laolao</span><sup>1</sup> from his hand to Monster Zone 2 in Defense Position, then Special Summon his <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> to Monster Zone 5 in Defense Position.</p>
@@ -65,7 +65,7 @@
       <p class="activation">Donovan activate the effect of his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>, sending his Set<sup>8</sup> <span class="cardName">Huaquero of the Golden Land</span><sup>2</sup> to the GY.</p><div class="chain">
         <p>Daniel activate the effect of a <span class="cardName">PSY-Framegear Gamma</span> in his hand. Daniel Special Summon a <span class="cardName">PSY-Framegear Gamma</span><sup>2</sup> from his hand to Monster Zone 3 in Defense Position and a <span class="cardName">PSY-Frame Driver</span><sup>1</sup> from his Deck to Monster Zone 2 in Defense Position. Daniel negate the activation of Chain Link 1.</p>
       </div><p class="resolution">The effect does not resolve.</p>
-      <p>Donovan activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2. Daniel concede.</p>
+      <p>Donovan activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> in Spell &amp; Trap Zone 2. Daniel concede.</p>
     </div>
   </div>
 </body>
