--- a/duels/13mar21/match3/duel2.html
+++ b/duels/13mar21/match3/duel2.html
@@ -11,13 +11,13 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Jamie activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4, banishing face-down 6 cards from his Extra Deck. Jamie excavate from his Deck a <span class="cardName">Virtual World City - Kauwloon</span>, a <span class="cardName">PSY-Frame Driver</span>, two <span class="cardName">Virtual World Gate - Qinglong</span>, a <span class="cardName">Called by the Grave</span>, and a <span class="cardName">Virtual World Gate - Xuanwu</span>. Jamie add a <span class="cardName">Virtual World City - Kauwloon</span> from his Deck to the hand and place the rest on the bottom of his Deck.</p>
-      <p>Jamie activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Jamie place a <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup> from his Deck face-up in Spell &amp; Trap Zone 3.</p>
+      <p>Jamie activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> in Spell &amp; Trap Zone 4, banishing face-down 6 cards from his Extra Deck. Jamie excavate from his Deck a <span class="cardName">Virtual World City - Kauwloon</span>, a <span class="cardName">PSY-Frame Driver</span>, two <span class="cardName">Virtual World Gate - Qinglong</span>, a <span class="cardName">Called by the Grave</span>, and a <span class="cardName">Virtual World Gate - Xuanwu</span>. Jamie add a <span class="cardName">Virtual World City - Kauwloon</span> from his Deck to the hand and place the rest on the bottom of his Deck.</p>
+      <p>Jamie activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> in Spell &amp; Trap Zone 4. Jamie place a <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup> from his Deck face-up in Spell &amp; Trap Zone 3.</p>
       <p>Jamie activate the effect of a <span class="cardName">Virtual World Xiezhi - Jiji</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>. Jamie send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> from his hand to Monster Zone 4 in Defense Position.</p>
       <p>Joshua activate the effect of an <span class="cardName">Artifact Lancea</span><sup>1</sup> in his hand, Tributing it. The effect resolve.</p>
     </div>
     <div class="turn-p2">
-      <p>Joshua activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Joshua add a <span class="cardName">Zoodiac Ratpier</span> from his Deck to the hand.</p>
+      <p>Joshua activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> in Spell &amp; Trap Zone 3. Joshua add a <span class="cardName">Zoodiac Ratpier</span> from his Deck to the hand.</p>
       <p class="note">Joshua's <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> apply its aura.</p>
       <p>Joshua Normal Summon a <span class="cardName">Zoodiac Ramram</span><sup>1</sup> to Monster Zone 3.</p>
       <p>Joshua overlay his <span class="cardName">Zoodiac Ramram</span><sup>1</sup> to Xyz Summon a <span class="cardName">Zoodiac Boarbow</span><sup>1</sup> to Monster Zone 3 in Attack Position.</p>
@@ -56,7 +56,7 @@
       <p>Jamie banish his <span class="cardName">PSY-Frame Driver</span><sup>1</sup>.</p>
     </div>
     <div class="turn-p1">
-      <p>Jamie activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>2</sup> from his hand in Spell &amp; Trap Zone 4. Jamie place a <span class="cardName">Virtual World Gate - Qinglong</span><sup>3</sup> from his Deck face-up in Spell &amp; Trap Zone 3.</p>
+      <p>Jamie activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>2</sup> in Spell &amp; Trap Zone 4. Jamie place a <span class="cardName">Virtual World Gate - Qinglong</span><sup>3</sup> from his Deck face-up in Spell &amp; Trap Zone 3.</p>
       <p>Jamie activate the effect of his <span class="cardName">Virtual World Gate - Qinglong</span><sup>3</sup>, banishing his <span class="cardName">Virtual World City - Kauwloon</span><sup>2</sup>, then target Joshua's <span class="cardName">Divine Arsenal AA-ZEUS - Sky Thunder</span><sup>2</sup>. The effect resolve.</p>
     </div>
     <div class="turn-p2">
