--- a/duels/13mar21/match5/duel1.html
+++ b/duels/13mar21/match5/duel1.html
@@ -21,7 +21,7 @@
       <p>Donovan activate his Set<sup>5</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup>. Donovan Special Summon his <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup> to Monster Zone 1 in Defense Position.</p>
     </div>
     <div class="turn-p1">
-      <p>Donovan activate a <span class="cardName">Pot of Extravagance</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 5, banishing face-down 6 cards from his Extra Deck. Donovan draw 2 cards.</p>
+      <p>Donovan activate a <span class="cardName">Pot of Extravagance</span><sup>1</sup> in Spell &amp; Trap Zone 5, banishing face-down 6 cards from his Extra Deck. Donovan draw 2 cards.</p>
       <p>Donovan set the Link Arrow with his <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup> to Link Summon a <span class="cardName">Link Spider</span><sup>1</sup> to the right-hand Extra Monster Zone.</p>
       <p>Donovan attack directly with his <span class="cardName">Link Spider</span><sup>1</sup>. Joshua take 1000 battle damage (Joshua 7000 LP).</p>
       <p>Donovan Set<sup>10</sup> a Spell/Trap in Spell &amp; Trap Zone 2.</p>
@@ -32,7 +32,7 @@
       </div><p class="resolution">The effect does not resolve.</p>
     </div>
     <div class="turn-p2">
-      <p class="activation">Joshua activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 5, banishing face-down 6 cards from his Extra Deck.</p><div class="chain">
+      <p class="activation">Joshua activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> in Spell &amp; Trap Zone 5, banishing face-down 6 cards from his Extra Deck.</p><div class="chain">
         <p>Donovan activate his Set<sup>10</sup> <span class="cardName">Solemn Judgment</span><sup>1</sup>, paying 3250 LP (Donovan 3250 LP). Donovan negate the activation of Chain Link 1 and destroy Joshua's <span class="cardName">Pot of Prosperity</span><sup>1</sup>.</p>
       </div><p class="resolution">The effect does not resolve.</p>
       <p class="activation">Joshua activate his Set<sup>9</sup> <span class="cardName">Altergeist Manifestation</span><sup>1</sup>, targeting his <span class="cardName">Altergeist Multifaker</span><sup>1</sup>.</p><div class="chain">
