--- a/duels/13mar21/match6/duel1.html
+++ b/duels/13mar21/match6/duel1.html
@@ -35,7 +35,7 @@
       <p>Kristian Set<sup>2</sup> a Spell/Trap in Spell &amp; Trap Zone 4.</p>
     </div>
     <div class="turn-p2">
-      <p>Sven activate a <span class="cardName">Chaos Space</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1, sending an <span class="cardName">Absorouter Dragon</span><sup>1</sup> from his hand to the GY. Sven add a <span class="cardName">White Dragon Wyverburster</span> from his Deck to the hand.</p>
+      <p>Sven activate a <span class="cardName">Chaos Space</span><sup>1</sup> in Spell &amp; Trap Zone 1, sending an <span class="cardName">Absorouter Dragon</span><sup>1</sup> from his hand to the GY. Sven add a <span class="cardName">White Dragon Wyverburster</span> from his Deck to the hand.</p>
       <p class="activation">Sven activate the effect of his <span class="cardName">Absorouter Dragon</span><sup>1</sup>.</p><div class="chain">
         <p>Kristian activate the effect of an <span class="cardName">Artifact Lancea</span><sup>1</sup> in his hand, Tributing it. The effect resolve.</p>
       </div><p class="resolution">Sven add a <span class="cardName">Rokket Tracer</span> from his Deck to the hand.</p>
