--- a/duels/13mar21/match10/duel1.html
+++ b/duels/13mar21/match10/duel1.html
@@ -11,13 +11,13 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Marijn activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Its effects resolve.</p>
+      <p>Marijn activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> in Spell &amp; Trap Zone 1. Its effects resolve.</p>
       <p>Marijn activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Marijn 7200 LP). Marijn add an <span class="cardName">Eldlich the Golden Lord</span> from his Deck to the hand.</p>
-      <p>Marijn activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Marijn fuse a <span class="cardName">Dark Magician</span><sup>1</sup> in his Deck and a <span class="cardName">Red-Eyes Black Dragon</span><sup>1</sup> in his Deck to Fusion Summon a <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> to Monster Zone 5 in Attack Position.</p>
+      <p>Marijn activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> in Spell &amp; Trap Zone 3. Marijn fuse a <span class="cardName">Dark Magician</span><sup>1</sup> in his Deck and a <span class="cardName">Red-Eyes Black Dragon</span><sup>1</sup> in his Deck to Fusion Summon a <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> to Monster Zone 5 in Attack Position.</p>
       <p>Marijn Set<sup>1&rarr;3</sup> 3 Spells/Traps in Spell &amp; Trap Zones 2, 3, and 4.</p>
     </div>
     <div class="turn-p2">
-      <p>Joshua activate a <span class="cardName">Cosmic Cyclone</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3, paying 1000 LP (Joshua 7000 LP), then target Marijn's Set<sup>1</sup> Spell/Trap. Joshua banish Marijn's Set<sup>1</sup> <span class="cardName">Ice Dragon's Prison</span><sup>1</sup>.</p>
+      <p>Joshua activate a <span class="cardName">Cosmic Cyclone</span><sup>1</sup> in Spell &amp; Trap Zone 3, paying 1000 LP (Joshua 7000 LP), then target Marijn's Set<sup>1</sup> Spell/Trap. Joshua banish Marijn's Set<sup>1</sup> <span class="cardName">Ice Dragon's Prison</span><sup>1</sup>.</p>
       <p>Joshua Normal Summon a <span class="cardName">Zoodiac Whiptail</span><sup>1</sup> to Monster Zone 4.</p>
       <p>Joshua overlay his <span class="cardName">Zoodiac Whiptail</span><sup>1</sup> to Xyz Summon a <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup> to Monster Zone 4 in Attack Position.</p>
       <p class="note">Joshua's <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup> gain the following effect:</p>
@@ -29,7 +29,7 @@
       <p class="activation">Joshua activate the effect of his <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup>.</p><div class="chain">
         <p>Marijn activate the effect of his <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup>, discarding an <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>. Marijn negate the activation of Chain Link 1 and destroy Joshua's <span class="cardName">Zoodiac Hammerkong</span><sup>1</sup>.</p>
       </div><p class="resolution">The effect does not resolve.</p>
-      <p>Joshua activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Joshua add a <span class="cardName">Zoodiac Ratpier</span> from his Deck to the hand.</p>
+      <p>Joshua activate a <span class="cardName">Fire Formation - Tenki</span><sup>1</sup> in Spell &amp; Trap Zone 4. Joshua add a <span class="cardName">Zoodiac Ratpier</span> from his Deck to the hand.</p>
       <p>Joshua Set<sup>4&rarr;5</sup> 2 Spells/Traps in Spell &amp; Trap Zones 1 and 5.</p>
     </div>
     <div class="turn-p1">
