--- a/duels/13mar21/match10/duel2.html
+++ b/duels/13mar21/match10/duel2.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Joshua activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Its effects resolve.</p>
+      <p>Joshua activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> in Spell &amp; Trap Zone 3. Its effects resolve.</p>
       <p>Joshua activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Joshua 7200 LP). Joshua add a <span class="cardName">Conquistador of the Golden Land</span> from his Deck to the hand.</p>
       <p>Joshua Normal Summon a <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup> to Monster Zone 1.</p>
       <p>Joshua activate the effect of his <span class="cardName">Zoodiac Thoroughblade</span><sup>1</sup>. Joshua discard a <span class="cardName">Zoodiac Bunnyblast</span><sup>1</sup> and draw a card.</p>
@@ -71,7 +71,7 @@
       <p>Marijn activate his Set<sup>14</sup> <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>3</sup>. Marijn Special Summon an <span class="cardName">Eldlich the Golden Lord</span><sup>3</sup> from his Deck to Monster Zone 1 in Attack Position.</p>
     </div>
     <div class="turn-p2">
-      <p>Marijn activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Marijn fuse a <span class="cardName">Dark Magician</span><sup>1</sup> in his Deck and a <span class="cardName">Red-Eyes Black Dragon</span><sup>1</sup> in his Deck to Fusion Summon a <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> to Monster Zone 4 in Attack Position.</p>
+      <p>Marijn activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> in Spell &amp; Trap Zone 4. Marijn fuse a <span class="cardName">Dark Magician</span><sup>1</sup> in his Deck and a <span class="cardName">Red-Eyes Black Dragon</span><sup>1</sup> in his Deck to Fusion Summon a <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> to Monster Zone 4 in Attack Position.</p>
       <p>Joshua activate a Set<sup>11</sup> <span class="cardName">Forbidden Droplet</span><sup>1</sup>, sending an <span class="cardName">Eldlich the Golden Lord</span><sup>4</sup> from his hand to the GY. The effect resolve.</p>
       <p class="note">Marijn's <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> have its effects negated until the end of this turn.</p>
       <p>Marijn activate the effect of his <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>3</sup>, banishing it. Marijn Set<sup>15</sup> a <span class="cardName">Huaquero of the Golden Land</span><sup>3</sup> from his Deck in Spell &amp; Trap Zone 4.</p>
