--- a/duels/13mar21/match11/duel1.html
+++ b/duels/13mar21/match11/duel1.html
@@ -11,7 +11,7 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p class="activation">Donovan activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2.</p><div class="chain">
+      <p class="activation">Donovan activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> in Spell &amp; Trap Zone 2.</p><div class="chain">
         <p>Kristian activate the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup> in his hand, discarding it. Kristian negate the effect of Chain Link 1.</p>
       </div><p class="resolution">The effect fizzle.</p>
       <p>Donovan Set<sup>1&rarr;3</sup> 3 Spells/Traps in Spell &amp; Trap Zones 1, 2, and 3.</p>
@@ -34,7 +34,7 @@
       <p>Kristian Set<sup>5</sup> a Spell/Trap in Spell &amp; Trap Zone 2.</p>
     </div>
     <div class="turn-p1">
-      <p>Donovan activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2. Its effects resolve.</p>
+      <p>Donovan activate a <span class="cardName">Cursed Eldland</span><sup>1</sup> in Spell &amp; Trap Zone 2. Its effects resolve.</p>
       <p>Donovan activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>, paying 800 LP (Donovan 4200 LP). Donovan add a <span class="cardName">Huaquero of the Golden Land</span> from his Deck to the hand.</p>
       <p>Donovan Set<sup>6</sup> a Spell/Trap in Spell &amp; Trap Zone 3.</p>
     </div>
@@ -46,7 +46,7 @@
       <p>Kristian activate the effect of his <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup>, discarding a <span class="cardName">Phantom Knights' Fog Blade</span><sup>1</sup>. Kristian send a <span class="cardName">The Phantom Knights of Ancient Cloak</span><sup>2</sup> from his Deck to the GY.</p>
       <p>Kristian activate the effect of his <span class="cardName">The Phantom Knights of Ancient Cloak</span><sup>2</sup>, banishing it. Kristian add a <span class="cardName">The Phantom Knights of Silent Boots</span> from his Deck to the hand.</p>
       <p>Kristian Special Summon a <span class="cardName">The Phantom Knights of Silent Boots</span><sup>2</sup> from his hand to Monster Zone 4 in Defense Position.</p>
-      <p>Kristian activate an <span class="cardName">Emergency Teleport</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Kristian Special Summon a <span class="cardName">Psychic Tracker</span><sup>1</sup> from his Deck to Monster Zone 1 in Attack Position.</p>
+      <p>Kristian activate an <span class="cardName">Emergency Teleport</span><sup>1</sup> in Spell &amp; Trap Zone 1. Kristian Special Summon a <span class="cardName">Psychic Tracker</span><sup>1</sup> from his Deck to Monster Zone 1 in Attack Position.</p>
       <p>Kristian overlay his <span class="cardName">The Phantom Knights of Torn Scales</span><sup>1</sup> and his <span class="cardName">The Phantom Knights of Silent Boots</span><sup>2</sup> to Xyz Summon a <span class="cardName">Leviair the Sea Dragon</span><sup>1</sup> to Monster Zone 3 in Attack Position.</p>
       <p>Kristian activate the effect of his <span class="cardName">Leviair the Sea Dragon</span><sup>1</sup>, detaching his <span class="cardName">The Phantom Knights of Silent Boots</span><sup>2</sup>, then target his <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup>. Kristian Special Summon his <span class="cardName">The Phantom Knights of Ragged Gloves</span><sup>1</sup> to Monster Zone 4 in Attack Position.</p>
       <p>Kristian activate the effect of his <span class="cardName">Phantom Knights' Fog Blade</span><sup>1</sup>, banishing it, then target his <span class="cardName">The Phantom Knights of Silent Boots</span><sup>2</sup>. Kristian Special Summon his <span class="cardName">The Phantom Knights of Silent Boots</span><sup>2</sup> to Monster Zone 2 in Attack Position.</p>
