--- a/duels/13mar21/match12/duel1.html
+++ b/duels/13mar21/match12/duel1.html
@@ -14,9 +14,9 @@
       <p>Alex Set<sup>1</sup> a Spell/Trap in Spell &amp; Trap Zone 1.</p>
     </div>
     <div class="turn-p2">
-      <p>Marco activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3, banishing face-down 6 cards from his Extra Deck. Marco excavate from his Deck a <span class="cardName">Virtual World Gate - Qinglong</span>, a <span class="cardName">Virtual World Gate - Chuche</span>, a <span class="cardName">Virtual World City - Kauwloon</span>, a <span class="cardName">PSY-Framegear Gamma</span>, a <span class="cardName">Pot of Prosperity</span>, and a <span class="cardName">Virtual World Mai-Hime - Lulu</span>. Marco add a <span class="cardName">Virtual World City - Kauwloon</span> from his Deck to the hand and place the rest on the bottom of his Deck.</p>
+      <p>Marco activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> in Spell &amp; Trap Zone 3, banishing face-down 6 cards from his Extra Deck. Marco excavate from his Deck a <span class="cardName">Virtual World Gate - Qinglong</span>, a <span class="cardName">Virtual World Gate - Chuche</span>, a <span class="cardName">Virtual World City - Kauwloon</span>, a <span class="cardName">PSY-Framegear Gamma</span>, a <span class="cardName">Pot of Prosperity</span>, and a <span class="cardName">Virtual World Mai-Hime - Lulu</span>. Marco add a <span class="cardName">Virtual World City - Kauwloon</span> from his Deck to the hand and place the rest on the bottom of his Deck.</p>
       <p class="note">For the rest of this turn, any damage Alex take is halved.</p>
-      <p>Marco activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Marco place a <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup> from his Deck face-up in Spell &amp; Trap Zone 4.</p>
+      <p>Marco activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> in Spell &amp; Trap Zone 3. Marco place a <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup> from his Deck face-up in Spell &amp; Trap Zone 4.</p>
       <p class="activation">Marco activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>.</p><div class="chain">
         <p>Alex activate the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup> in his hand, discarding it. Alex negate the effect of Chain Link 1.</p>
       </div><p class="resolution">The effect fizzle.</p>
@@ -33,9 +33,9 @@
       <p>Marco add his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> to the hand.</p>
     </div>
     <div class="turn-p1">
-      <p>Alex activate a <span class="cardName">Chaos Space</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1, sending an <span class="cardName">Omni Dragon Brotaur</span><sup>1</sup> from his hand to the GY. Alex add a <span class="cardName">White Dragon Wyverburster</span> from his Deck to the hand.</p>
+      <p>Alex activate a <span class="cardName">Chaos Space</span><sup>1</sup> in Spell &amp; Trap Zone 1, sending an <span class="cardName">Omni Dragon Brotaur</span><sup>1</sup> from his hand to the GY. Alex add a <span class="cardName">White Dragon Wyverburster</span> from his Deck to the hand.</p>
       <p>Marco activate the effect of an <span class="cardName">Artifact Lancea</span><sup>1</sup> in his hand, Tributing it. The effect resolve.</p>
-      <p class="activation">Alex activate a <span class="cardName">World Legacy Guardragon</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2, targeting his <span class="cardName">Omni Dragon Brotaur</span><sup>1</sup>.</p><div class="chain">
+      <p class="activation">Alex activate a <span class="cardName">World Legacy Guardragon</span><sup>1</sup> in Spell &amp; Trap Zone 2, targeting his <span class="cardName">Omni Dragon Brotaur</span><sup>1</sup>.</p><div class="chain">
         <p>Marco activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>, targeting Alex's <span class="cardName">World Legacy Guardragon</span><sup>1</sup>. Marco shuffle into the Deck his <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> and his <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup>, then destroy Alex's <span class="cardName">World Legacy Guardragon</span><sup>1</sup>.</p>
       </div><p class="resolution">The effect fizzle.</p>
     </div>
