--- a/duels/13mar21/match14/duel1.html
+++ b/duels/13mar21/match14/duel1.html
@@ -11,8 +11,8 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Marco activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3, banishing face-down 6 cards from his Extra Deck. Marco excavate from his Deck a <span class="cardName">PSY-Framegear Gamma</span>, a <span class="cardName">Virtual World Mai-Hime - Lulu</span>, a <span class="cardName">Pot of Prosperity</span>, a <span class="cardName">Virtual World Kirin - Lili</span>, a <span class="cardName">Foolish Burial Goods</span>, and a <span class="cardName">Virtual World Xiezhi - Jiji</span>. Marco add a <span class="cardName">Virtual World Mai-Hime - Lulu</span> from his Deck to the hand and place the rest on the bottom of his Deck.</p>
-      <p>Marco activate a <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Its effects resolve.</p>
+      <p>Marco activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> in Spell &amp; Trap Zone 3, banishing face-down 6 cards from his Extra Deck. Marco excavate from his Deck a <span class="cardName">PSY-Framegear Gamma</span>, a <span class="cardName">Virtual World Mai-Hime - Lulu</span>, a <span class="cardName">Pot of Prosperity</span>, a <span class="cardName">Virtual World Kirin - Lili</span>, a <span class="cardName">Foolish Burial Goods</span>, and a <span class="cardName">Virtual World Xiezhi - Jiji</span>. Marco add a <span class="cardName">Virtual World Mai-Hime - Lulu</span> from his Deck to the hand and place the rest on the bottom of his Deck.</p>
+      <p>Marco activate a <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> in Spell &amp; Trap Zone 3. Its effects resolve.</p>
       <p>Marco activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup>. Marco send a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position, then add a <span class="cardName">Virtual World Gate - Chuche</span> from his Deck to the hand.</p>
       <p>Marco activate the effect of a <span class="cardName">Virtual World Xiezhi - Jiji</span> in his hand, targeting his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup>. Marco send a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his Deck to the GY and Special Summon a <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> from his hand to Monster Zone 2 in Defense Position.</p>
       <p>Marco activate the effect of his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup>. Marco Special Summon his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> to Monster Zone 1 in Attack Position.</p>
@@ -31,7 +31,7 @@
     </div>
     <div class="turn-p2">
       <p>Marco activate the effect of his <span class="cardName">True King of All Calamities</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Kyubi - Shenshen</span><sup>1</sup>. The effect resolve.</p>
-      <p>Donovan activate a <span class="cardName">Pot of Extravagance</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1, banishing face-down 6 cards from his Extra Deck. Donovan draw 2 cards.</p>
+      <p>Donovan activate a <span class="cardName">Pot of Extravagance</span><sup>1</sup> in Spell &amp; Trap Zone 1, banishing face-down 6 cards from his Extra Deck. Donovan draw 2 cards.</p>
       <p>Donovan Set<sup>2&rarr;6</sup> a Spell/Trap in each Spell &amp; Trap Zone.</p>
     </div>
     <div class="turn-p1">
