--- a/duels/13mar21/match14/duel2.html
+++ b/duels/13mar21/match14/duel2.html
@@ -14,7 +14,7 @@
       <p>Marco Set<sup>1</sup> a Spell/Trap in Spell &amp; Trap Zone 3.</p>
     </div>
     <div class="turn-p2">
-      <p>Donovan activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1, banishing face-down 6 cards from his Extra Deck. Donovan excavate from his Deck two <span class="cardName">Dimension Shifter</span>, a <span class="cardName">Huaquero of the Golden Land</span>, an <span class="cardName">Eldlixir of Scarlet Sanguine</span>, a <span class="cardName">Summon Limit</span>, and a <span class="cardName">Conquistador of the Golden Land</span>. Donovan add an <span class="cardName">Eldlixir of Scarlet Sanguine</span> from his Deck to the hand and place the rest on the bottom of his Deck.</p>
+      <p>Donovan activate a <span class="cardName">Pot of Prosperity</span><sup>1</sup> in Spell &amp; Trap Zone 1, banishing face-down 6 cards from his Extra Deck. Donovan excavate from his Deck two <span class="cardName">Dimension Shifter</span>, a <span class="cardName">Huaquero of the Golden Land</span>, an <span class="cardName">Eldlixir of Scarlet Sanguine</span>, a <span class="cardName">Summon Limit</span>, and a <span class="cardName">Conquistador of the Golden Land</span>. Donovan add an <span class="cardName">Eldlixir of Scarlet Sanguine</span> from his Deck to the hand and place the rest on the bottom of his Deck.</p>
       <p>Donovan Set<sup>2&rarr;6</sup> a Spell/Trap in each Spell &amp; Trap Zone.</p>
     </div>
     <div class="turn-p1">
@@ -24,7 +24,7 @@
       <p>Donovan activate his Set<sup>5</sup> <span class="cardName">Huaquero of the Golden Land</span><sup>1</sup>. Donovan Special Summon his <span class="cardName">Huaquero of the Golden Land</span><sup>1</sup> to Monster Zone 1 in Defense Position, then banish Marco's <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup>.</p>
       <p>Marco Normal Summon a <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> to Monster Zone 4.</p>
       <p>Donovan activate his Set<sup>4</sup> <span class="cardName">Summon Limit</span><sup>1</sup>. Its effects resolve.</p>
-      <p>Marco activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2. Marco place a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his Deck face-up in Spell &amp; Trap Zone 5.</p>
+      <p>Marco activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> in Spell &amp; Trap Zone 2. Marco place a <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup> from his Deck face-up in Spell &amp; Trap Zone 5.</p>
       <p>Marco activate the effect of his <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup>, banishing his <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup>, then target Donovan's <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>. The effect resolve.</p>
       <p>Marco activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>, targeting Donovan's <span class="cardName">Summon Limit</span><sup>1</sup>. Marco shuffle into the Deck his <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> and his <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup>, then destroy Donovan's <span class="cardName">Summon Limit</span><sup>1</sup>.</p>
       <p>Marco overlay his <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> and his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> to Xyz Summon a <span class="cardName">Number 49: Fortune Tune</span><sup>1</sup> to the right-hand Extra Monster Zone in Attack Position.</p>
@@ -41,7 +41,7 @@
     </div>
     <div class="turn-p1">
       <p>Marco activate the effect of his <span class="cardName">Virtual World Gate - Qinglong</span><sup>2</sup>, banishing it. Marco add a <span class="cardName">Virtual World Mai-Hime - Lulu</span> from his Deck to the hand, then send a <span class="cardName">Lightning Storm</span><sup>1</sup> from his hand to the GY.</p>
-      <p>Marco activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2. Marco place a <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup> from his Deck face-up in Spell &amp; Trap Zone 4.</p>
+      <p>Marco activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> in Spell &amp; Trap Zone 2. Marco place a <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup> from his Deck face-up in Spell &amp; Trap Zone 4.</p>
       <p>Marco Tribute his <span class="cardName">Divine Arsenal AA-ZEUS - Sky Thunder</span><sup>1</sup> to Tribute Summon a <span class="cardName">Virtual World Oto-Hime - Toutou</span><sup>1</sup> from his hand to Monster Zone 3 in Attack Position.</p>
       <p class="activation">Marco activate the effect of a <span class="cardName">Virtual World Mai-Hime - Lulu</span> in his hand, targeting his <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup>.</p><div class="chain">
         <p class="activation">Donovan activate his Set<sup>7</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup>.</p><div class="chain">
@@ -79,7 +79,7 @@
       </div><p class="resolution">Donovan Set<sup>11</sup> an <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>3</sup> from his Deck in Spell &amp; Trap Zone 4.</p>
     </div>
     <div class="turn-p1">
-      <p class="activation">Marco activate a <span class="cardName">Harpie's Feather Duster</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1.</p><div class="chain">
+      <p class="activation">Marco activate a <span class="cardName">Harpie's Feather Duster</span><sup>1</sup> in Spell &amp; Trap Zone 1.</p><div class="chain">
         <p class="activation">Donovan activate his Set<sup>10</sup> <span class="cardName">Conquistador of the Golden Land</span><sup>2</sup>.</p><div class="chain">
           <p class="activation">Donovan activate his Set<sup>11</sup> <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>3</sup>.</p><div class="chain">
             <p>Marco activate the effect of his <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup>, targeting Donovan's <span class="cardName">Conquistador of the Golden Land</span><sup>2</sup>. Marco shuffle into the Deck his <span class="cardName">Virtual World Hime - Nyannyan</span><sup>1</sup> and his <span class="cardName">Virtual World Roshi - Laolao</span><sup>2</sup>, then destroy Donovan's <span class="cardName">Conquistador of the Golden Land</span><sup>2</sup>.</p>
