--- a/duels/13mar21/match15/duel2.html
+++ b/duels/13mar21/match15/duel2.html
@@ -36,13 +36,13 @@
       <p>Daniel add his <span class="cardName">Virtual World Mai-Hime - Lulu</span><sup>1</sup> to the hand.</p>
     </div>
     <div class="turn-p2">
-      <p class="activation">Donovan activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3.</p><div class="chain">
+      <p class="activation">Donovan activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> in Spell &amp; Trap Zone 3.</p><div class="chain">
         <p>Daniel activate the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>2</sup> in his hand, discarding it. Daniel negate the effect of Chain Link 1.</p>
       </div><p class="resolution">The effect fizzle.</p>
       <p>Donovan Set<sup>2&rarr;5</sup> 4 Spells/Traps in Spell &amp; Trap Zones 2, 3, 4, and 5.</p>
     </div>
     <div class="turn-p1">
-      <p>Daniel activate a <span class="cardName">Harpie's Feather Duster</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Donovan concede.</p>
+      <p>Daniel activate a <span class="cardName">Harpie's Feather Duster</span><sup>1</sup> in Spell &amp; Trap Zone 1. Donovan concede.</p>
     </div>
   </div>
 </body>
