--- a/duels/13mar21/match4/duel1.html
+++ b/duels/13mar21/match4/duel1.html
@@ -11,11 +11,11 @@
   </div>
   <div id="duelScript">
     <div class="turn-p1">
-      <p>Marijn activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 3. Marijn fuse a <span class="cardName">Dark Magician</span><sup>1</sup> in his Deck and a <span class="cardName">Red-Eyes Black Dragon</span><sup>1</sup> in his Deck to Fusion Summon a <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> to Monster Zone 5 in Attack Position.</p>
+      <p>Marijn activate a <span class="cardName">Red-Eyes Fusion</span><sup>1</sup> in Spell &amp; Trap Zone 3. Marijn fuse a <span class="cardName">Dark Magician</span><sup>1</sup> in his Deck and a <span class="cardName">Red-Eyes Black Dragon</span><sup>1</sup> in his Deck to Fusion Summon a <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> to Monster Zone 5 in Attack Position.</p>
       <p>Marijn Set<sup>1&rarr;3</sup> 3 Spells/Traps in Spell &amp; Trap Zones 1, 2, and 3.</p>
     </div>
     <div class="turn-p2">
-      <p class="activation">Adi activate a <span class="cardName">Pot of Desires</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1, banishing face-down 10 cards from his Deck.</p><div class="chain">
+      <p class="activation">Adi activate a <span class="cardName">Pot of Desires</span><sup>1</sup> in Spell &amp; Trap Zone 1, banishing face-down 10 cards from his Deck.</p><div class="chain">
         <p>Marijn activate the effect of his <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup>, discarding a <span class="cardName">Called by the Grave</span><sup>1</sup>. Marijn negate the activation of Chain Link 1 and destroy Adi's <span class="cardName">Pot of Desires</span><sup>1</sup>.</p>
         <p class="note">Marijn's <span class="cardName">Red-Eyes Dark Dragoon</span><sup>1</sup> gain 1000 ATK.</p>
       </div><p class="resolution">The effect does not resolve.</p>
