--- a/duels/13mar21/match4/duel2.html
+++ b/duels/13mar21/match4/duel2.html
@@ -23,7 +23,7 @@
       <p>Marijn activate the effect of an <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> in his hand, sending it and an <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>1</sup> in his hand to the GY, then target Adi's Set<sup>3</sup> Spell/Trap. Marijn send Adi's Set<sup>3</sup> <span class="cardName">Solemn Strike</span><sup>1</sup> to the GY.</p>
       <p>Marijn activate the effect of his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup>, sending his <span class="cardName">Cursed Eldland</span><sup>1</sup> to the GY. Marijn add his <span class="cardName">Eldlich the Golden Lord</span><sup>1</sup> to the hand.</p>
       <p>Marijn activate the effect of his <span class="cardName">Cursed Eldland</span><sup>1</sup>. Marijn send a <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup> from his Deck to the GY.</p>
-      <p>Marijn activate a <span class="cardName">Lightning Storm</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2. Marijn destroy Adi's Set<sup>1</sup> <span class="cardName">Torrential Tribute</span><sup>1</sup> and Adi's Set<sup>2</sup> <span class="cardName">Paleozoic Canadia</span><sup>1</sup>.</p>
+      <p>Marijn activate a <span class="cardName">Lightning Storm</span><sup>1</sup> in Spell &amp; Trap Zone 2. Marijn destroy Adi's Set<sup>1</sup> <span class="cardName">Torrential Tribute</span><sup>1</sup> and Adi's Set<sup>2</sup> <span class="cardName">Paleozoic Canadia</span><sup>1</sup>.</p>
       <p>Marijn Set<sup>5&rarr;7</sup> 3 Spells/Traps in Spell &amp; Trap Zones 1, 2, and 3.</p>
       <p class="activation">Marijn activate the effect of his <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>1</sup>, banishing it.</p><div class="chain">
         <p>Marijn activate the effect of his <span class="cardName">Conquistador of the Golden Land</span><sup>1</sup>, banishing it. Marijn Set<sup>8</sup> an <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>2</sup> from his Deck in Spell &amp; Trap Zone 5.</p>
@@ -60,7 +60,7 @@
       <p>Marijn activate the effect of his <span class="cardName">Eldlixir of White Destiny</span><sup>1</sup>, banishing it. Marijn Set<sup>12</sup> a <span class="cardName">Conquistador of the Golden Land</span><sup>3</sup> from his Deck in Spell &amp; Trap Zone 5.</p>
     </div>
     <div class="turn-p1">
-      <p>Adi activate a <span class="cardName">Pot of Desires</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 2, banishing face-down 10 cards from his Deck. Adi draw 2 cards.</p>
+      <p>Adi activate a <span class="cardName">Pot of Desires</span><sup>1</sup> in Spell &amp; Trap Zone 2, banishing face-down 10 cards from his Deck. Adi draw 2 cards.</p>
       <p>Adi Set<sup>13&rarr;14</sup> 2 Spells/Traps in Spell &amp; Trap Zones 2 and 3.</p>
       <p>Marijn activate the effect of his <span class="cardName">Eldlixir of Scarlet Sanguine</span><sup>3</sup>, banishing it. Marijn Set<sup>15</sup> a <span class="cardName">Huaquero of the Golden Land</span><sup>2</sup> from his Deck in Spell &amp; Trap Zone 4.</p>
     </div>
