--- a/duels/13mar21/match5/duel2.html
+++ b/duels/13mar21/match5/duel2.html
@@ -15,7 +15,7 @@
       <p>Joshua Normal Set<sup>4</sup> a monster in Monster Zone 1.</p>
     </div>
     <div class="turn-p2">
-      <p class="activation">Donovan activate a <span class="cardName">Pot of Extravagance</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1, banishing face-down 6 cards from his Extra Deck.</p><div class="chain">
+      <p class="activation">Donovan activate a <span class="cardName">Pot of Extravagance</span><sup>1</sup> in Spell &amp; Trap Zone 1, banishing face-down 6 cards from his Extra Deck.</p><div class="chain">
         <p>Joshua activate his Set<sup>2</sup> <span class="cardName">Imperial Order</span><sup>1</sup>. Its effects resolve.</p>
       </div><p class="resolution">The effect fizzle.</p>
       <p>Donovan activate an <span class="cardName">Evenly Matched</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 1. Joshua banish face-down his Set<sup>1</sup> Spell/Trap, his Set<sup>3</sup> Spell/Trap, and his Set<sup>4</sup> monster.</p>
