--- a/duels/13mar21/match9/duel3.html
+++ b/duels/13mar21/match9/duel3.html
@@ -21,7 +21,7 @@
       <p class="note">Daniel's <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> have its Level increased by 3 until the end of this turn.</p>
       <p>Daniel overlay his <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup> and his <span class="cardName">Virtual World Kirin - Lili</span><sup>1</sup> to Xyz Summon a <span class="cardName">Beatrice, Lady of the Eternal</span><sup>1</sup> to Monster Zone 4 in Attack Position.</p>
       <p>Daniel activate the effect of his <span class="cardName">Beatrice, Lady of the Eternal</span><sup>1</sup>, detaching his <span class="cardName">Virtual World Xiezhi - Jiji</span><sup>1</sup>. Daniel send a <span class="cardName">Mischief of the Gnomes</span><sup>1</sup> from his Deck to the GY.</p>
-      <p class="activation">Daniel activate a <span class="cardName">Triple Tactics Talent</span><sup>2</sup> from his hand in Spell &amp; Trap Zone 3.</p><div class="chain">
+      <p class="activation">Daniel activate a <span class="cardName">Triple Tactics Talent</span><sup>2</sup> in Spell &amp; Trap Zone 3.</p><div class="chain">
         <p>Danyllo activate the effect of an <span class="cardName">Ash Blossom &amp; Joyous Spring</span><sup>1</sup> in his hand, discarding it. Danyllo negate the effect of Chain Link 1.</p>
       </div><p class="resolution">The effect fizzle.</p>
       <p>Daniel Set<sup>1</sup> a Spell/Trap in Spell &amp; Trap Zone 3.</p>
@@ -40,7 +40,7 @@
       <p>Danyllo activate his Set<sup>2</sup> <span class="cardName">Virtual World Gate - Xuanwu</span><sup>1</sup>. Its effects resolve.</p>
     </div>
     <div class="turn-p2">
-      <p>Danyllo activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> from his hand in Spell &amp; Trap Zone 4. Danyllo place a <span class="cardName">Virtual World Gate - Qinglong</span><sup>3</sup> from his Deck face-up in Spell &amp; Trap Zone 2.</p>
+      <p>Danyllo activate a <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup> in Spell &amp; Trap Zone 4. Danyllo place a <span class="cardName">Virtual World Gate - Qinglong</span><sup>3</sup> from his Deck face-up in Spell &amp; Trap Zone 2.</p>
       <p class="activation">Danyllo activate the effect of his <span class="cardName">Virtual World Gate - Qinglong</span><sup>3</sup>, banishing his <span class="cardName">Virtual World City - Kauwloon</span><sup>1</sup>, then target Daniel's <span class="cardName">Divine Arsenal AA-ZEUS - Sky Thunder</span><sup>1</sup>.</p><div class="chain">
         <p>Daniel activate his Set<sup>1</sup> <span class="cardName">Virtual World Gate - Chuche</span><sup>2</sup>, targeting Danyllo's <span class="cardName">Virtual World Gate - Qinglong</span><sup>3</sup>. Daniel shuffle into the Deck his <span class="cardName">Virtual World Gate - Qinglong</span><sup>1</sup> and his <span class="cardName">Virtual World Gate - Chuche</span><sup>1</sup>, then destroy Danyllo's <span class="cardName">Virtual World Gate - Qinglong</span><sup>3</sup>.</p>
       </div><p class="resolution">The effect fizzle.</p>
