add duels and descriptions

--- a/duels/13mar21/index.html
+++ b/duels/13mar21/index.html
@@ -42,6 +42,8 @@
         <a href="match7/duel1.html">Duel 1</a><br>
         <a href="match7/duel2.html">Duel 2</a>
       <h3>Match 8: Adrian Dursun VS Alex Robertson</h3>
+        <a href="match8/duel1.html">Duel 1</a><br>
+        <a href="match8/duel2.html">Duel 2</a>
     <hr>
     <h2>Quarterfinals</h2>
       <h3>Match 9: Daniel Hartmann VS Danyllo Verweij</h3>
