--- a/description/5969957.html
+++ b/description/5969957.html
@@ -27,7 +27,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">If a DARK monster you control that was Special Summoned from the Extra Deck is destroyed by battle or card effect: </span>
       <span class="activation">You can send this card from your hand or field to the GY, then target the destroyed monster; </span>
-      <span class="resolution">Special Summon 1 DARK monster from your GY whose original name is different from that of the targeted monster.</span>
+      <span class="resolution">Special Summon 1 DARK monster from your GY whose original name is different from that target.</span>
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
