--- a/description/88504133.html
+++ b/description/88504133.html
@@ -19,7 +19,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">During the Main Phase: </span>
       <span class="activation">Banish any number of DARK monsters from your GY, then target 1 DARK Xyz Monster you control; </span>
-      <span class="resolution">Xyz Summon 1 "The Phantom Knights", "Raidraptor", or "Xyz Dragon" Xyz Monster, whose Rank equals that of the targeted monster you control plus the number of monsters banished to activate this card, by using it as material. (Transfer its materials to the Summoned monster.)</span>
+      <span class="resolution">Special Summon 1 "The Phantom Knights", "Raidraptor", or "Xyz Dragon" Xyz Monster, whose Rank equals that of the targeted monster you control plus the number of monsters banished to activate this card, by using it as Xyz Material. (This is treated as an Xyz Summon. Transfer its materials to the Summoned monster.)</span>
     </p>
   </div>
 </body>
