--- a/description/8972398.html
+++ b/description/8972398.html
@@ -27,7 +27,7 @@
       <span class="effectNumber">&#9312;: </span>
       <span class="condition">If a monster you control is destroyed by battle or an opponent's card effect: </span>
       <span class="activation"></span>
-      <span class="resolution">You can Special Summon this card from your hand or from the GY, but banish it when it leaves the field.</span>
+      <span class="resolution">You can Special Summon this card from your hand or GY, but banish it when it leaves the field.</span>
     </p>
     <p class="effect">
       <span class="effectNumber">&#9313;: </span>
