--- a/description/27548199.html
+++ b/description/27548199.html
@@ -34,7 +34,7 @@
       <span class="condition"></span>
       <span class="activation"></span>
       <span class="resolution"></span>
-      This card gains ATK equal to half the ATK of the monster equipped to it by its effect.
+      This card gains ATK equal to half the ATK of the monster equipped to it by its own effect.
     </p>
     <p class="effect">
       <span class="effectNumber">&#9314;: </span>
