--- a/search.html
+++ b/search.html
@@ -1,6 +1,7 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="search-style.css">
+  <link rel="stylesheet" href="local-style.css">
   <script src="search-script.js"></script>
   <script src="jpDesc.js"></script>
 </head>
